--- a/mysite/socialdist/templates/socialdist/index.html
+++ b/mysite/socialdist/templates/socialdist/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 {% load  static %}
-<link rel='stylesheet' type="text/css" href="{% static 'socialdist/styles.css' %}">
+<link rel='stylesheet' type="text/css" href="{% static 'socialdist/landing.css' %}">
 
 </head>
 <body>
