cleanup file folder structure

--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -8,7 +8,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="{% static 'socialdist/landing.css' %}"
+      href="{% static 'css/landing.css' %}"
     />
   </head>
   <body>
