--- a/mysite/socialdist/static/css/landing.css
+++ b/mysite/socialdist/static/css/landing.css
@@ -1,11 +1,11 @@
-*{ 
+*{
 
     margin: 0;
 }
 
 @font-face{
     font-family: 'gotham-bold';
-    src: url("fonts/GothamBold.ttf");
+    src: url("../fonts/GothamBold.ttf");
 
 }
 
@@ -14,10 +14,10 @@ p{
 }
 
 .pretty-bg{
-    background: linear-gradient(135deg, #813ec7, #d93d5c); 
+    background: linear-gradient(135deg, #813ec7, #d93d5c);
     width: 100%;
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 0;   
+    left: 0;
 }
