--- a/mysite/socialdist/templates/socialdist/index.html
+++ b/mysite/socialdist/templates/socialdist/index.html
@@ -4,13 +4,17 @@
 
 {% block content %}
 <div class='pretty-bg'>
+  <div class="hermes-big">Hermes</div>
+  <div class='big-marker'></div>
+  <div id="friendly-reminder"> your friendly neighbourhood social network </div>
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
   <p> <a href="{% url 'logout' %}">Log Out</a></p>
 {% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a>
-  <a href="{% url 'signup' %}">Sign Up</a>
+  <div class="link-box"><a href="{% url 'login' %}">Log In</a></div>
+  <br>
+  <div class="link-box link-box-noncolor"><a href="{% url 'signup' %}">Sign Up</a></div>
+
 {% endif %}
 </div>
 {% endblock %}
