--- a/mysite/socialdist/static/css/landing.css
+++ b/mysite/socialdist/static/css/landing.css
@@ -9,6 +9,11 @@
     src: url("../fonts/GothamBold.ttf");
 
 }
+@font-face{
+    font-family: 'gotham-light';
+    src: url("../fonts/GothamLight.ttf");
+
+}
 
 p{
     font-family: 'gotham-bold';
@@ -22,6 +27,7 @@ p{
     top: 0;
     left: 0;
 }
+
 
 .hermes-big{
   color: white;
@@ -37,6 +43,21 @@ p{
   height: auto;
 }
 
+.hermes-na
+{
+  color: white;
+  font-family: 'gotham-bold', 'times';
+  font-size: 60px;
+  text-align: center;
+  position: absolute;
+  width: 30%;
+  height: auto;
+  width: 100vw;
+  height: auto;
+  opacity: 1;
+  margin-top: 10vh;
+}
+
 .big-marker{
   background:url('../img/big_mark.svg');
   margin-top: 25vh;
@@ -47,7 +68,18 @@ p{
   opacity: 0;
 }
 
-#friendly-reminder {
+.big-marker-na
+{
+  background:url('../img/big_mark.svg');
+  margin-top: 20vh;
+  margin-left: 48vw;
+  width: 100%;
+  background-repeat: no-repeat;
+  height: 50px;
+  opacity: 1;
+}
+
+.friendly-reminder {
     width: 100%;
     height:auto;
     font-size: 19px;
@@ -55,6 +87,16 @@ p{
     font-family: 'gotham-bold', 'times';
     text-align: center;
     opacity: 0;
+}
+
+.reminder-na{
+  width: 100%;
+  height:auto;
+  font-size: 19px;
+  color: white;
+  font-family: 'gotham-bold', 'times';
+  text-align: center;
+  opacity: 1;
 }
 
 a{
