--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -10,6 +10,11 @@
       type="text/css"
       href="{% static 'css/landing.css' %}"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/signup.css' %}"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{% static 'js/landing.js' %}"></script>
   </head>
