--- a/mysite/socialdist/templates/socialdist/index.html
+++ b/mysite/socialdist/templates/socialdist/index.html
@@ -6,7 +6,7 @@
 <div class='pretty-bg'>
   <div class="hermes-big">Hermes</div>
   <div class='big-marker'></div>
-  <div id="friendly-reminder"> your friendly neighbourhood social network </div>
+  <div class="friendly-reminder"> your friendly neighbourhood social network </div>
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
   <p> <a href="{% url 'logout' %}">Log Out</a></p>
