--- a/mysite/socialdist/templates/socialdist/login.html
+++ b/mysite/socialdist/templates/socialdist/login.html
@@ -1,12 +1,17 @@
-{% extends 'base.html' %}
-
+{% extends 'socialdist/base.html' %}
 {% block title %}Login{% endblock %}
 
 {% block content %}
+<div class='pretty-bg'>
+  <div class="hermes-big">Hermes</div>
+  <div class='big-marker'></div>
+  <div class="friendly-reminder"> your friendly neighbourhood social network </div>
 <h2>Log In</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Log In</button>
 </form>
+</div>
+
 {% endblock %}
