--- a/mysite/socialdist/templates/registration/login.html
+++ b/mysite/socialdist/templates/registration/login.html
@@ -12,6 +12,7 @@
     {{ form.as_p }}
     <button type="submit">Log In</button>
   </form>
+  <div class="return"><a href="{% url 'index' %}">Return</a></div>
 </div>
 </div>
 
