--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -8,15 +8,15 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="{% static 'css/landing.css' %}"
+      href="{% static 'socialdist/css/landing.css' %}"
     />
     <link
       rel="stylesheet"
       type="text/css"
-      href="{% static 'css/signup.css' %}"
+      href="{% static 'socialdist/css/signup.css' %}"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="{% static 'js/landing.js' %}"></script>
+    <script src="{% static 'socialdist/js/landing.js' %}"></script>
   </head>
   <body>
     <main>{% block content %} {% endblock %}</main>
