--- a/mysite/socialdist/templates/registration/login.html
+++ b/mysite/socialdist/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'socialdist/base.html' %}
+{% extends '../socialdist/base.html' %}
 {% block title %}Login{% endblock %}
 
 {% block content %}
