--- a/mysite/socialdist/static/socialdist/css/feed.css
+++ b/mysite/socialdist/static/socialdist/css/feed.css
@@ -52,6 +52,8 @@
   text-decoration: none;
 }
 
+/*  the main feed section ---------------------------------------------- */
+
 .feed-section
 {
   position: absolute;
@@ -84,11 +86,15 @@
 
 .ui-form-input {
   padding: 13px 15px;
-  border-radius: 8px;
-  border: 2px solid #1a73e8;
+  border-radius: 20px 20px 0px 0px;
+  border: none;
   outline: 0;
   height:150px;
   width: 50%;
+}
+.ui-form-input:focus{
+  border: 2px solid #1a73e8;
+  border-bottom: none;
 }
 
 .ui-form-btn {
@@ -111,6 +117,12 @@
   color: #d50000;
 }
 
+.outer-container
+{
+  height:auto;
+  width:inherit;
+}
+
 textarea {
   margin-top: 3%;
   min-height: 6em;
@@ -122,11 +134,150 @@ textarea {
   resize: none;
 }
 
+/* wrapper code for all the controls in a post */
 .button-div
 {
-  border-radius: 8px;
-  background-color: black;
+  border-radius: 0 0 20px 20px;
+  position: absolute;
+  background-color: white;
+  /* background-color: rgba(0,0,0,0.4); */
   width: 50%;
   height:50px;
   margin-top: -0.2%;
 }
+
+/* submit post button */
+
+.button-div .submitbtn
+{
+  /* float: right; */
+  border: none;
+  margin-left: 30%;
+  background-color: #D0B7D8;
+  height: 45px;
+  width:200px;
+  font-size: 18px;
+  border-radius:30px;
+  transition: background-color 0.5s;
+  cursor: pointer;
+}
+
+.button-div .submitbtn:hover{
+  background-color: #d93d5c;
+  opacity: 0.5;
+  color: white;
+}
+
+/* --------------------------- for the toggle 'unlisted post'------------------------------ */
+
+.switch {
+  float: left;
+  margin-left: 2%;
+  margin-top: 2%;
+  margin-right: 1%;
+  position: relative;
+  display: inline-block;
+}
+.switch-input {
+  display: none;
+}
+.switch-label {
+  display: block;
+  width: 48px;
+  height: 24px;
+  text-indent: -150%;
+  clip: rect(0 0 0 0);
+  color: transparent;
+  user-select: none;
+}
+.switch-label::before,
+.switch-label::after {
+  content: "";
+  display: block;
+  position: absolute;
+  cursor: pointer;
+}
+.switch-label::before {
+  width: 100%;
+  height: 100%;
+  background-color: #dedede;
+  border-radius: 9999em;
+  -webkit-transition: background 0.25s ease;
+  transition: background 0.25s ease;
+}
+.switch-label::after {
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
+  -webkit-transition: left 0.25s ease;
+  transition: left 0.25s ease;
+}
+.switch-input:checked + .switch-label::before {
+  background: linear-gradient(to left, #813ec7, #d93d5c);
+}
+.switch-input:checked + .switch-label::after {
+  left: 24px;
+}
+
+
+/* --------------------------- for drop down privacy_controls ---------------------- */
+
+.dropbtn {
+  margin-left: 80%;
+  width: 100%;
+  background-color: transparent;
+  color: rgba(0,0,0,0.75);
+  padding: 10px;
+  border-radius: 50px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: background-color 0.8s;
+
+}
+
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #d93d5c;
+  color: white;
+  /* transition: color 1s; */
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+
+  margin-left: 83%;
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 130px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 14px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
