--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -10,6 +10,7 @@
      <link rel="stylesheet" type="text/css" href="{% static 'socialdist/css/feed.css' %}"/>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/landing.js' %}"></script>
+     <script type="text/javascript" src="{% static 'socialdist/js/dropdown.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/auto_expand_text.js' %}"></script>
   </head>
   <body>
