--- a/mysite/socialdist/static/socialdist/css/feed.css
+++ b/mysite/socialdist/static/socialdist/css/feed.css
@@ -1,5 +1,5 @@
 .fade-bg{
-    background: linear-gradient(135deg, rgba(129, 62, 199,0.2), rgba(217, 61, 92,0.2));
+    background: linear-gradient(135deg, rgba(129, 62, 199,0.1), rgba(217, 61, 92,0.1));
     width: 100%;
     height: 100vh;
     position: fixed;
@@ -66,6 +66,12 @@
   height: inherit;
   z-index: 9999;
   overflow-y: scroll;
+
+}
+
+.feed-section span{
+  color: #d93d5c;
+  opacity: 0.8;
 }
 
 .compose-post
