--- a/mysite/socialdist/static/socialdist/css/feed.css
+++ b/mysite/socialdist/static/socialdist/css/feed.css
@@ -47,10 +47,31 @@
 }
 
 
-.sidebar a{
+.mini-links {
   color:#D0B7D8;
-  text-decoration: none;
+  /* text-decoration: none; */
+  font-size: 20px;
+  /* margin-left: 20%; */
+  width: 100%;
+  height: inherit;
+  text-align:center;
 }
+
+.mini-links:hover{
+  height: auto;
+  width: 100%;
+  background-color: black;
+}
+
+
+.sidebar-links{
+  height: auto;
+  /* margin-top: 10%; */
+  width: 100%;
+
+}
+
+
 
 /*  the main feed section ---------------------------------------------- */
 
