--- a/mysite/socialdist/templates/socialdist/index.html
+++ b/mysite/socialdist/templates/socialdist/index.html
@@ -8,8 +8,12 @@
   <div class='big-marker'></div>
   <div class="friendly-reminder"> your friendly neighbourhood social network </div>
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
-  <p> <a href="{% url 'logout' %}">Log Out</a></p>
+<div class="signup logged-in">
+  <h1>Welcome Back {{ user.username }}!</h1>
+<p> <a href="{% url 'feed' %}"><button>Your Feed</button></a></p>
+  <p> <a href="{% url 'logout' %}"><button>Log Out</button></a></p>
+
+</div>
 {% else %}
   <a href="{% url 'login' %}"><div class="link-box">Log In</div></a>
   <br>
