--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -18,7 +18,9 @@
   <div class="feed-section">
     <span>Feed</span>
     <!-- from Ahmet Aksungur (https://codepen.io/ahmetaksungur) at https://codepen.io/ahmetaksungur/pen/MWaVxyd  -->
-
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
     <label class="ui-form-input-container">
       <div class="outer-container">
     <textarea class="ui-form-input" placeholder="How are you doing today?">
@@ -37,12 +39,13 @@
     <a href="#">Only Me</a>
   </div>
 </div>
-      <button class="submitbtn"> Submit </button>
+      <button class="submitbtn" type="submit"> Submit </button>
 
     </div>
       </div>
-
+      
   </label>
+  </form>
 </div>
 
 </div>
