--- a/mysite/socialdist/templates/socialdist/test_post.html
+++ b/mysite/socialdist/templates/socialdist/test_post.html
@@ -3,10 +3,12 @@
 {% block content %}
 
 <div class="post-body">
-    <form method='post'>
-        {{ form.as_p }}
+  <form action="feed" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
 
-        <button type="submit">Submit</button>
-    </form>
+    <input type="submit" value="Submit">
+</form>
 
 </div>
+{% endblock content %}
