--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'socialdist/css/landing.css' %}"/>
      <link rel="stylesheet" type="text/css" href="{% static 'socialdist/css/signup.css' %}"/>
      <link rel="stylesheet" type="text/css" href="{% static 'socialdist/css/feed.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'socialdist/css/post.css' %}"/>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/landing.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/dropdown.js' %}"></script>
