--- a/mysite/socialdist/static/socialdist/css/feed.css
+++ b/mysite/socialdist/static/socialdist/css/feed.css
@@ -15,6 +15,7 @@
   position: fixed;
   background-color: white;
   float: left;
+
 }
 .photo
 {
@@ -55,6 +56,7 @@
   width: 100%;
   height: inherit;
   text-align:center;
+
 }
 
 .mini-links:hover{
@@ -66,7 +68,7 @@
 
 .sidebar-links{
   height: auto;
-  /* margin-top: 10%; */
+  margin-left: 20%;
   width: 100%;
 
 }
@@ -308,3 +310,21 @@ textarea {
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
+
+
+
+/* ------------------------------------------------------posts */
+
+.posts em{
+  color: grey;
+}
+.posts p
+{
+  height: auto;
+  width: 40%;
+  background-color: white;
+  color: black;
+  margin-top: 3%;
+  padding: 15px 25px;
+  border-radius: 5px;
+}
