most links have a page

--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -9,9 +9,11 @@
     <a class="mini-links" href="{% url 'create_post' %}"> Create Post</a><br><br><br>
 
   <p><a class="mini-links" href="{% url 'feed' %}"> Feed </a></p>
+    <a class="mini-links"href="{% url 'profile' %}"> Profile </a><br>
     <p><a class="mini-links" href="#"> Unlisted </a>  </p>
   <a class="mini-links"href="#"> Friends </a><br>
-  <a class="mini-links"href="{% url 'image_upload' %}"> Profile </a><br>
+
+  <a class="mini-links"href="{% url 'user_settings' %}"> Settings </a><br>
   <a class="mini-links" href="{% url 'logout' %}"> Logout </a>
 
   </div>
