--- a/mysite/socialdist/templates/socialdist/create_post.html
+++ b/mysite/socialdist/templates/socialdist/create_post.html
@@ -36,7 +36,17 @@
 <div class="sidebar">
   <div class="photo"></div>
   <div class="name">Welcome back <br> <span>Robin Gale</span></div>
-  <div class = "sidebar-links"></div>
+  <div class = "sidebar-links">
+    <a class="mini-links" href="{% url 'create_post' %}"> Create Post</a><br><br><br>
+
+  <p><a class="mini-links" href="{% url 'feed' %}"> Feed </a></p>
+    <a class="mini-links"href="{% url 'profile' %}"> Profile </a><br>
+    <p><a class="mini-links" href="#"> Unlisted </a>  </p>
+  <a class="mini-links"href="#"> Friends </a><br>
+
+  <a class="mini-links"href="{% url 'user_settings' %}"> Settings </a><br>
+  <a class="mini-links" href="{% url 'logout' %}"> Logout </a>
+
   </div>
     <div class="feed-section">
         <span>New Post</span>
