fixed username display issues

--- a/mysite/socialdist/templates/socialdist/create_post.html
+++ b/mysite/socialdist/templates/socialdist/create_post.html
@@ -35,7 +35,7 @@
 <div class='fade-bg'>
 <div class="sidebar">
   <div class="photo"></div>
-  <div class="name">Welcome back <br> <span>Robin Gale</span></div>
+  <div class="name">Welcome back <br> <span>{{request.user.username}}</span></div>
   <div class = "sidebar-links"></div>
   </div>
     <div class="feed-section">
