--- a/mysite/socialdist/templates/socialdist/create_post.html
+++ b/mysite/socialdist/templates/socialdist/create_post.html
@@ -35,9 +35,9 @@
 <div class='fade-bg'>
 <div class="sidebar">
   <div class="photo"></div>
-  <div class="name">Welcome back <br> <span>{{user.username}}</span></div>
+  <div class="name">Welcome back <br> <span>{{user.username}}</span></div><br><br><br>
   <div class = "sidebar-links">
-    <a class="mini-links" href="{% url 'create_post' %}"> Create Post</a><br><br><br>
+    <a class="mini-links" href="{% url 'create_post' %}"> Create Post</a>
 
   <p><a class="mini-links" href="{% url 'feed' %}"> Feed </a></p>
     <a class="mini-links"href="{% url 'profile' %}"> Profile </a><br>
@@ -48,6 +48,7 @@
   <a class="mini-links" href="{% url 'logout' %}"> Logout </a>
 
   </div>
+</div>
     <div class="feed-section">
         <span>New Post</span>
 <div class="post-body">
@@ -59,7 +60,6 @@
     <input type="submit" value="Create post" id="submitbtn"/>
   </form>
 
-</div>
 </div>
 </div>
 
