--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -23,9 +23,9 @@
   <div class="feed-section">
     <span>Feed</span>
 <div class="posts">
-  {% for post in posts %}
-            <p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em></p>
-            
+  {% for post, likes in posts.items %}
+            <p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em> <em>{{ likes }} likes</em></p>
+           
         {% endfor %}</div>
 </div>
 
