--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -1,5 +1,6 @@
 {% extends 'socialdist/base.html' %}
 {% block title %}Feed{% endblock %}
+{% load markdown_extras %}
 {% block content %}
 <div class='fade-bg'>
 <div class="sidebar">
@@ -24,7 +25,7 @@
     <span>Feed</span>
 <div class="posts">
   {% for post in posts %}
-            <p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em></p>
+            <p><em>@{{ post.created_by.username }}</em> {{ post.contents | markdown |safe}} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em></p>
         {% endfor %}</div>
 </div>
 
