--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -1,11 +1,10 @@
 {% extends 'socialdist/base.html' %}
-{% block title %}Feed{% endblock %}
-{% load markdown_extras %}
+{% block title %} {{author}}'s Profile{% endblock %}
 {% block content %}
 <div class='fade-bg'>
 <div class="sidebar">
   <div class="photo"></div>
-  <div class="name">Welcome back <br> <span>{{user.username}}</span></div><br><br><br>
+  <div class="name">Welcome back <br> <span>{{request.user.username}}</span></div><br><br><br>
   <div class = "sidebar-links">
     <a class="mini-links" href="{% url 'create_post' %}"> Create Post</a>
 
@@ -22,12 +21,18 @@
   </div>
 
   <div class="feed-section">
-    <span>Feed</span>
-<div class="posts">
-  {% for post in posts %}
-            <p><em>@<a href="{% url 'author_profile' post.created_by.id %}">{{ post.created_by.username }}</a></em> {{ post.contents | markdown |safe}} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em></p>
-        {% endfor %}</div>
-</div>
+    <span>
+      {{author}}
+      Profile
+      </span>
+      {% if user.username != author %}
+      <input onclick="followToggle()" type="button" value="+ Follow" id="follow-button"></input> <br> <br>
+      {% endif%}
+      <div class="posts">
+        {% for post in posts %}
+                  <p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em></p>
+              {% endfor %}</div>
+      </div>
 
-</div>
+    </div>
 {% endblock %}
