--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -25,7 +25,7 @@
 <div class="posts">
   {% for post, likes in posts.items %}
             <p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em> <em>{{ likes }} likes</em></p>
-           
+           <a href="{% url 'view_post' post.id %}"> View Comments </a>
         {% endfor %}</div>
 </div>
 
