--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -25,6 +25,7 @@
     <span>Feed</span>
 <div class="posts">
   {% for post, likes in posts.items %}
+            {{ post.id }}
             <p><em>@{{ post.created_by.username }}</em> {{ post.contents | markdown |safe}} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em> <em>{{ likes }} likes</em></p>
            <a href="{% url 'view_post' post.id %}"> View Comments </a>
         {% endfor %}</div>
