--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -25,9 +25,13 @@
       {{author}}
       Profile
       </span>
-      {% if user.username != author %}
-      <input onclick="followToggle()" type="button" value="+ Follow" id="follow-button"></input> <br> <br>
-      {% endif%}
+      {% if request.user.username != author %}
+      {% if request.user not in author.following.all() %}
+      <a href="/send_friend_request/{{user.id}}/"><input onclick="friendToggle()" type="button" value="+ Follow" id="follow-button"></input></a> <br> <br>
+      {% else %}
+      <a href="/unfriend/{{user.id}}/"><input onclick="unfriendToggle()" type="button" value="✓ Following" id="unfollow-button"></input></a> <br> <br>
+      {% endif %}
+      {% endif %}
       <div class="posts">
         {% for post in posts %}
                   <p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em></p>
