--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -26,12 +26,16 @@
       Profile
       </span>
     Followers: <a href="/author/{{author_id}}}}/followers/">{{followers_count}}</a>
-      {% if request.user.id != author_id %}
-      {% if not following %}
-      <a href="/follow/{{author_id}}/"><input onclick="followToggle()" type="button" value="+ Follow" id="follow-button"></input></a> <br> <br>
-      {% else %}
-      <a href="/unfollow/{{author_id}}/"><input onclick="unfollowToggle()" type="button" value="✓ Following" id="unfollow-button"></input></a> <br> <br>
-      {% endif %}
+      {% if request.user.username != author %}
+        {% if not following %}
+          <a href="/follow/{{author_id}}/"><input onclick="followToggle()" type="button" value="+ Follow" id="follow-button"></input></a> <br> <br>
+        {% else %}
+          {% if not friends %}
+            <a href="/unfollow/{{author_id}}/"><input onclick="unfollowToggle()" type="button" value="✓ Following" id="unfollow-button"></input></a> <br> <br>
+          {% else %}
+            <a href="/unfollow/{{author_id}}/"><input onclick="unfriendToggle()" type="button" value=">< Friends" id="unfriend-button"></input></a> <br> <br>
+          {% endif %}
+        {% endif %}
       {% endif %}
       <div class="posts">
         {% for post in posts %}
