--- a/mysite/socialdist/templates/socialdist/base.html
+++ b/mysite/socialdist/templates/socialdist/base.html
@@ -19,6 +19,9 @@
      <script type="text/javascript" src="{% static 'socialdist/js/autoExpandText.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/followToggle.js' %}"></script>
      <script type="text/javascript" src="{% static 'socialdist/js/unfollowToggle.js' %}"></script>
+     <script type="text/javascript" src="{% static 'socialdist/js/unfriendToggle.js' %}"></script>
+     <script type="text/javascript" src="{% static 'socialdist/js/likeToggle.js' %}"></script>
+     <script type="text/javascript" src="{% static 'socialdist/js/unlikeToggle.js' %}"></script>
 
   </head>
   <body>
