--- a/mysite/socialdist/static/socialdist/css/profile.css
+++ b/mysite/socialdist/static/socialdist/css/profile.css
@@ -34,6 +34,24 @@
   font-weight: bold;
 }
 
+#unfriend-button {
+  color: #3399FF;
+  font-family: "Helvetica";
+  font-size: 10pt;
+  background-color: #ffffff;
+  border: 1px solid;
+  margin-left: 30%;
+  border-color: #3399FF;
+  border-radius: 10px;
+  width: 90px;
+  height: 30px;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
 #follow-button:hover{
   background-color: blue;
   opacity: 0.6;
@@ -45,4 +63,11 @@
   opacity: 0.6;
   color: white;
   content: "Unfollow";
+}
+
+#unfriend-button:hover{
+  background-color: red;
+  opacity: 0.6;
+  color: white;
+  content: "Unfriend";
 }
