--- a/mysite/socialdist/templates/socialdist/view_post.html
+++ b/mysite/socialdist/templates/socialdist/view_post.html
@@ -21,12 +21,15 @@
   </div>
 
 <div class='posts'>
-<p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em> <em>{{ likes }} likes</em></p>
+<p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em> <em>{{ likes_count }} likes</em></p>
 </div>
 
 <div class='like-post'>
-    <form action="{% url 'view_post' post.id %} " method="post">
-    {% csrf_token %}
-    {{ form }}
+    {% if not liked %}
+    <a href="/like/{{post_id}}/"><input onclick="likeToggle()" type="button" value="+ Like" id="like-button"></input></a> <br> <br>
+    {% else %}
+    <a href="/unlike/{{post_id}}/"><input onclick="unlikeToggle()" type="button" value="✓ Like" id="unlike-button"></input></a> <br> <br>
+    {% endif %}
+</div>
 </div>
 {% endblock %}
