--- a/mysite/socialdist/templates/socialdist/view_post.html
+++ b/mysite/socialdist/templates/socialdist/view_post.html
@@ -1,5 +1,7 @@
 {% extends 'socialdist/base.html' %}
 {% block title %}Feed{% endblock %}
+{% load markdown_extras%}
+{% load templatefilter%}
 {% block content %}
 <div class='fade-bg'>
 <div class="sidebar">
@@ -15,21 +17,40 @@
 
   <a class="mini-links"href="{% url 'user_settings' %}"> Settings </a><br>
   <a class="mini-links" href="{% url 'logout' %}"> Logout </a>
-
   </div>
-
   </div>
-
-<div class='posts'>
-<p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em> <em>{{ likes_count }} likes</em></p>
+  <div class="feed-section">
+    <br>
+    <br>
+<div class="col-md-6">
+    <div class="posts">
+            <p>
+              <em>
+                @<a href="{% url 'author_profile' post.created_by.id %}">{{ post.created_by.username }}</a>
+              </em>
+              {{ post.contents | markdown |safe}}
+              <em>
+                {{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}
+              </em>
+              <em>
+                {{ likes_count }} likes
+              </em>
+            </p>
+           {% if not liked %}
+            <a href="/like/{{post.id}}/">
+              <input onclick="likeToggle()" type="button" value="❤ Like" id="like-button" class="btn btn-primary"></input>
+            </a>
+            <br>
+            <br>
+            {% else %}
+    <a href="/unlike/{{post.id}}/">
+      <input onclick="unlikeToggle()" type="button" value="❤ Liked" id="unlike-button" class="btn btn-primary"></input>
+    </a>
+    <br>
+    <br>
+  {% endif %}
+           </div>
 </div>
-
-<div class='like-post'>
-    {% if not liked %}
-    <a href="/like/{{post_id}}/"><input onclick="likeToggle()" type="button" value="+ Like" id="like-button"></input></a> <br> <br>
-    {% else %}
-    <a href="/unlike/{{post_id}}/"><input onclick="unlikeToggle()" type="button" value="✓ Like" id="unlike-button"></input></a> <br> <br>
-    {% endif %}
 </div>
 </div>
 {% endblock %}
