--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -1,5 +1,9 @@
 {% extends 'socialdist/base.html' %}
 {% block title %} {{author}}'s Profile{% endblock %}
+
+{% load markdown_extras %}
+{% load templatefilter %}
+
 {% block content %}
 <div class='fade-bg'>
 <div class="sidebar">
@@ -21,11 +25,13 @@
   </div>
 
   <div class="feed-section">
-    <span>
+    <span class="align-middle" style="color:black">
       {{author}}
-      Profile
       </span>
+      <br>
     Followers: <a href="/author/{{author_id}}}}/followers/">{{followers_count}}</a>
+    <br>
+    <br>
       {% if request.user.username != author %}
         {% if not following %}
           <a href="/follow/{{author_id}}/"><input onclick="followToggle()" type="button" value="+ Follow" id="follow-button"></input></a> <br> <br>
@@ -37,10 +43,38 @@
           {% endif %}
         {% endif %}
       {% endif %}
-      <div class="posts">
-        {% for post in posts %}
-                  <p><em>@{{ post.created_by.username }}</em> {{ post.contents }} <em>{{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}</em></p>
-              {% endfor %}</div>
+      <div class="col-md-6">
+        {% for post, likes in posts.items %}
+          <div class="posts">
+                  <p>
+                    <em>
+                      @<a href="{% url 'author_profile' post.created_by.id %}">{{ post.created_by.username }}</a>
+                    </em>
+                    {{ post.contents | markdown |safe}}
+                    <em>
+                      {{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}
+                    </em>
+                    <em>
+                      {{ likes }} likes
+                    </em>
+                  </p>
+                 <a href="{% url 'view_post' post.id %}"> View Comments </a>
+                 {% if not post_liked|get_item:post %}
+                  <a href="/like/{{post.id}}/">
+                    <input onclick="likeToggle()" type="button" value="❤ Like" id="like-button" class="btn btn-primary"></input>
+                  </a>
+                  <br>
+                  <br>
+                  {% else %}
+          <a href="/unlike/{{post.id}}/">
+            <input onclick="unlikeToggle()" type="button" value="❤ Liked" id="unlike-button" class="btn btn-primary"></input>
+          </a>
+          <br>
+          <br>
+        {% endif %}
+                 </div>
+        {% endfor %}
+      </div>
       </div>
 
     </div>
