added share and commenting: comments only half done

--- a/mysite/socialdist/templates/socialdist/author_profile.html
+++ b/mysite/socialdist/templates/socialdist/author_profile.html
@@ -51,12 +51,12 @@
                       @<a href="{% url 'author_profile' post.created_by.id %}">{{ post.created_by.username }}</a>
                     </em>
                     {{ post.contents | markdown |safe}}
-                    <em>
+                    <small style="color:#add8e6 ">
+
                       {{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}
-                    </em>
-                    <em>
                       {{ likes }} likes
-                    </em>
+
+                  </small>
                   </p>
                  <a href="{% url 'view_post' post.id %}"> <div class="btn btn-primary">🗩 Comments</div> </a>
                  {% if not post_liked|get_item:post %}
@@ -68,7 +68,13 @@
             <input onclick="unlikeToggle()" type="button" value="❤ Liked" id="unlike-button" class="btn btn-primary"></input>
           </a>
         {% endif %}
-        <a href="{% url 'view_post' post.id %}"> <div class="btn btn-primary">🚀 Share</div> </a>
+        {% if not post_shared|get_item:post %}
+       <a href="/share/{{post.id}}/"><input onclick="shareToggle()" value="🚀 Share" id ="share-button" class="btn btn-primary"></input> </a>
+         {% else %}
+         <a href="/unshare/{{post.id}}/">
+           <input onclick="unshareToggle()" type="button" value="🚀 Shared" id="share-button" class="btn btn-primary"></input>
+         </a>
+         {% endif %}
 
                  </div>
         {% endfor %}
