--- a/mysite/socialdist/templates/socialdist/feed.html
+++ b/mysite/socialdist/templates/socialdist/feed.html
@@ -30,17 +30,16 @@
     <div class="posts">
             <p>
               <em>
-                @<a href="{% url 'author_profile' post.created_by.id %}">{{ post.created_by.username }}</a>
+                @<a href="{% url 'author_profile' post.created_by.id %}" style="color:#88e ">{{ post.created_by.username }}</a>
               </em>
               {{ post.contents | markdown |safe}}
-              <small>
+              <small style="color:#add8e6; font-family:calibri; padding-right:45px" >
+
                 {{ post.created_at|date:"SHORT_DATETIME_FORMAT" }}
-
-
                 {{ likes }} likes
 
             </small>
-            </p>
+
            <a href="{% url 'view_post' post.id %}"> <div class="btn btn-primary">🗩 Comments</div> </a>
            {% if not post_liked|get_item:post %}
             <a href="/like/{{post.id}}/">
@@ -51,8 +50,14 @@
       <input onclick="unlikeToggle()" type="button" value="❤ Liked" id="unlike-button" class="btn btn-primary"></input>
     </a>
   {% endif %}
-  <a href="{% url 'view_post' post.id %}"> <div class="btn btn-primary">🚀 Share</div> </a>
-
+   {% if not post_shared|get_item:post %}
+  <a href="/share/{{post.id}}/">
+    <input onclick="shareToggle()" type="button" value="🚀 Share" id ="share-button" class="btn btn-primary"></input> </a>
+    {% else %}
+    <a href="/unshare/{{post.id}}/">
+      <input onclick="unshareToggle()" type="button" value="🚀 Shared" id="share-button" class="btn btn-primary"></input>
+    </a>
+    {% endif %}
            </div>
   {% endfor %}
 </div>
