--- a/mysite/socialdist/templates/socialdist/create_post.html
+++ b/mysite/socialdist/templates/socialdist/create_post.html
@@ -41,7 +41,7 @@
 
   <p><a class="mini-links" href="{% url 'feed' %}"> Feed </a></p>
     <a class="mini-links"href="{% url 'author_profile' user.id %}"> Profile </a><br>
-    <p><a class="mini-links" href="#"> Unlisted </a>  </p>
+    <p><a class="mini-links" href= "#"> Unlisted </a>  </p>
   <a class="mini-links"href="{% url 'followers' user.id %}"> Followers </a><br>
 
   <a class="mini-links"href="{% url 'user_settings' %}"> Settings </a><br>
@@ -55,7 +55,7 @@
 
   <form action="{% url 'create_post' %} " method="post">
               {% csrf_token %}
-              {{ form }}
+              {{ form.as_p }}
               <br>
     <input type="submit" value="Create post" id="submitbtn"/>
   </form>
